; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_sysfs.c_update_hw_stats.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/core/extr_sysfs.c_update_hw_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (%struct.ib_device.0*, %struct.rdma_hw_stats*, i32, i32)* }
%struct.ib_device.0 = type opaque
%struct.rdma_hw_stats = type { i32, i64, i64 }

@jiffies = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ib_device*, %struct.rdma_hw_stats*, i32, i32)* @update_hw_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_hw_stats(%struct.ib_device* %0, %struct.rdma_hw_stats* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.ib_device*, align 8
  %7 = alloca %struct.rdma_hw_stats*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.ib_device* %0, %struct.ib_device** %6, align 8
  store %struct.rdma_hw_stats* %1, %struct.rdma_hw_stats** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load %struct.rdma_hw_stats*, %struct.rdma_hw_stats** %7, align 8
  %12 = getelementptr inbounds %struct.rdma_hw_stats, %struct.rdma_hw_stats* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.rdma_hw_stats*, %struct.rdma_hw_stats** %7, align 8
  %15 = getelementptr inbounds %struct.rdma_hw_stats, %struct.rdma_hw_stats* %14, i32 0, i32 2
  %16 = load i64, i64* %15, align 8
  %17 = add nsw i64 %13, %16
  %18 = call i64 @time_is_after_eq_jiffies(i64 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %47

21:                                               ; preds = %4
  %22 = load %struct.ib_device*, %struct.ib_device** %6, align 8
  %23 = getelementptr inbounds %struct.ib_device, %struct.ib_device* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32 (%struct.ib_device.0*, %struct.rdma_hw_stats*, i32, i32)*, i32 (%struct.ib_device.0*, %struct.rdma_hw_stats*, i32, i32)** %24, align 8
  %26 = load %struct.ib_device*, %struct.ib_device** %6, align 8
  %27 = bitcast %struct.ib_device* %26 to %struct.ib_device.0*
  %28 = load %struct.rdma_hw_stats*, %struct.rdma_hw_stats** %7, align 8
  %29 = load i32, i32* %8, align 4
  %30 = load i32, i32* %9, align 4
  %31 = call i32 %25(%struct.ib_device.0* %27, %struct.rdma_hw_stats* %28, i32 %29, i32 %30)
  store i32 %31, i32* %10, align 4
  %32 = load i32, i32* %10, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %21
  %35 = load i32, i32* %10, align 4
  store i32 %35, i32* %5, align 4
  br label %47

36:                                               ; preds = %21
  %37 = load i32, i32* %10, align 4
  %38 = load %struct.rdma_hw_stats*, %struct.rdma_hw_stats** %7, align 8
  %39 = getelementptr inbounds %struct.rdma_hw_stats, %struct.rdma_hw_stats* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = icmp eq i32 %37, %40
  br i1 %41, label %42, label %46

42:                                               ; preds = %36
  %43 = load i64, i64* @jiffies, align 8
  %44 = load %struct.rdma_hw_stats*, %struct.rdma_hw_stats** %7, align 8
  %45 = getelementptr inbounds %struct.rdma_hw_stats, %struct.rdma_hw_stats* %44, i32 0, i32 1
  store i64 %43, i64* %45, align 8
  br label %46

46:                                               ; preds = %42, %36
  store i32 0, i32* %5, align 4
  br label %47

47:                                               ; preds = %46, %34, %20
  %48 = load i32, i32* %5, align 4
  ret i32 %48
}

declare dso_local i64 @time_is_after_eq_jiffies(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
